--- a/js/cao/style.css
+++ b/js/cao/style.css
@@ -14,6 +14,10 @@
   transform: rotate(3240deg);
   transition: all 4s ease-in-out;
 }
+.rotated1 {
+  transform: rotate(3240deg);
+  transition: all 4s ease-in-out;
+}
 
 input {
   margin-bottom: 20px;
